# es-doc

./: .eslintcache  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  main.py  package.json  pyproject.toml  resources-cache.json
.claude/: launch.json
.husky/: pre-commit
.impeccable/: design.json
app/: app.py
app/pages/: __init__.py  api.py  docs.py  resources.py  root.py  static.py
app/routes/: __init__.py  api.py  artists.py  docs.py  literature.py  news.py  res.py  resources.py  root.py  static.py
app/utils/: config.py  docs.py  file.py  lifespan.py  logging.py  md.py  renpy_lexer.py  svg.py
app/utils/lifespan/: __init__.py  artist_img_cache.py  artists_cache.py  docs_cache.py  (+8 more)
content/docs/: glossary.md
content/main/: thanks.md
src/: index.md  settings.md
src/.vuepress/: config.js  enhanceApp.js
src/guide/: README.md  advanced.md  code-examples.md  errors.md  videos.md
src/misc/: README.md  artists.md  literature.md  news-sources.md
static/css/: artists.css  authors.css  components.css  doc.css  fonts.css  home.css  main.css  resources.css  vars.css
static/js/: artists.js  contributors.js  docs.js  docs_code.js  resources.js  search.js  theme.js  totop.js
templates/: artists.html  authors.html  base.html  doc.html  docs_index.html  empty.html  error.html  home.html  literature.html  news.html  resources_browser.html  resources_index.html  resources_list.html  resources_viewer.html
templates/partials/: authors_core.html  footer.html  head.html  header.html  res_macros.html
(+66 files in other folders)
